# cadkit

./: .gitignore  BUILD_INSTRUCTIONS.md  CLAUDE.md  Cargo.toml  EULA.txt  README.md  ROADMAP.md  WGPU_INTEGRATION.md  drawing.json  memory.md  run.sh
backups/: app.rs.2026-03-01
crates/2d-core/: Cargo.toml
crates/2d-core/src/: dxf_io.rs  lib.rs
crates/geometry/: Cargo.toml
crates/geometry/src/: lib.rs  primitives.rs  region.rs  utils.rs
crates/geometry/src/intersect/: arc_arc.rs  arc_circle.rs  circle_circle.rs  line_arc.rs  line_circle.rs  line_line.rs  mod.rs  polyline.rs
crates/render-wgpu/: Cargo.toml
crates/render-wgpu/src/: font.rs  lib.rs  shader.wgsl  vertex.rs
crates/scripting-python/: Cargo.toml
crates/scripting-python/src/: lib.rs
crates/types/: Cargo.toml
crates/types/src/: lib.rs
crates/ui-egui/: Cargo.toml
crates/ui-egui/src/: app.rs  main.rs
crates/ui-egui/src/app/: commands.rs  io.rs  overlays.rs  state.rs  ui_panels.rs
scripts/: test_pyrun.py
