[package]
name = "cadkit-render-wgpu"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
cadkit-types = { path = "../types" }
cadkit-2d-core = { path = "../2d-core" }

wgpu = { workspace = true }
bytemuck = { version = "1.14", features = ["derive"] }
anyhow = { workspace = true }
log = { workspace = true }
