[package]
name = "cadkit-scripting-python"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow = { workspace = true }
cadkit-2d-core = { path = "../2d-core" }
cadkit-types = { path = "../types" }
pyo3 = { version = "0.28", features = ["auto-initialize"] }
