[package]
name = "cadkit"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "cadkit"
path = "src/main.rs"

[dependencies]
cadkit-types = { path = "../types" }
cadkit-2d-core = { path = "../2d-core" }
cadkit-render-wgpu = { path = "../render-wgpu" }
cadkit-geometry = { path = "../geometry" }

egui = { workspace = true }
eframe = { workspace = true, features = ["wgpu"] }
egui-wgpu = { version = "0.27" }
pollster = "0.3"
log = { workspace = true }
env_logger = { workspace = true }
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
rfd = "0.15"
